TestCases/Errors/range_value/observations/spr_02_obs.spm
 obs   6-14   0.000378787878787879 
 obs   6-15   0.00383827404479578 
 error_value   6-14   0 
 error_value   6-15   0 
